# nookat

./: .gitignore  .justfile  .pre-commit-config.yaml  .prettierignore  BUGFIXES.md  DOCKER_AUTOCOMPLETION_README.md  README.md  ROADMAP.md  TESTING.md  TICKETS.md  docker-compose.yml  env.example  index.html  jest.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/labels/: ready-for-review.yml  ready-to-merge.yml
.github/workflows/: build-linux.yaml  build-macos.yaml  build-windows.yaml  ci-builds.yml  ci.yml  publish.yaml  release.yaml  test.yml
docker_images/linux/: Dockerfile  README.md
e2e/: containers.spec.ts  global-setup.ts  global-teardown.ts  navigation.spec.ts  visual.spec.ts
releases/: v.0.1.0.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: colima_versions.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  sentry.rs  state.rs
src-tauri/src/entities/: config.rs  docker_info.rs  engine_setup.rs  engine_state.rs  engine_status.rs  images.rs  mod.rs  networks.rs  system_info.rs  volumes.rs
src-tauri/src/entities/config/: i18n.rs  mod.rs  other.rs  theme.rs  v1.rs  v2.rs
src-tauri/src/entities/containers/: container.rs  mod.rs  mount.rs  network.rs  port.rs
src-tauri/src/entities/engine/: docker_info.rs  mod.rs
src-tauri/src/handlers/: config.rs  containers.rs  engine.rs  engine_setup.rs  engine_state.rs  images.rs  mod.rs  networks.rs  setup.rs  system.rs  volumes.rs
src-tauri/src/handlers/system/: engine.rs  mod.rs
src-tauri/src/services/: config.rs  containers.rs  docker.rs  engine_setup.rs  engine_state_monitor.rs  images.rs  mod.rs  networks.rs  shell.rs  system_info.rs  updater.rs  volumes.rs  websocket.rs
src-tauri/src/services/engine/: linux.rs  macos.rs  mod.rs  stub.rs  windows.rs
src-tauri/src/services/engine/colima/: engine_setup.rs  install.rs  lima.rs  mod.rs
src-tauri/src/services/engine/macos/: mod.rs
src-tauri/src/services/engine/stub/: mod.rs
src-tauri/src/services/shell/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/tests/: integration_test.rs
src/__tests__/: App.test.tsx
src/components/: ContainerActions.tsx  StatusBadge.tsx
src/components2/: ContainerActions.tsx
src/config/: analytics.ts
src/contexts/: sentry-context.ts  theme-context.ts
src/hooks/: index.ts  use-config.ts  use-data-provider.ts  use-engine-setup.ts  use-engine-state.ts  use-engine-status.ts  use-engine.ts  use-page-analytics.ts  use-page-state.ts  use-sentry-context.ts  use-table-sort.ts  use-theme-context.ts  use-theme.ts  use-updater.ts  use-websocket.ts  useEngineStatus.ts
src/lib/: analytics.ts  config.ts  docker.ts  engine-provider.tsx  engine-state-provider.tsx  engine-status-provider.tsx  sentry-provider.tsx  theme-context.ts  theme-provider.tsx  use-data-provider.ts  use-theme.ts
src/pages/: ContainersPage-refactored.tsx  ContainersPage.tsx  ImagesPage.tsx  LimaVMPage.tsx  NetworksPage.tsx  SettingsPage.tsx  SplashScreen.tsx  VolumesPage.tsx  containers.tsx  networks.tsx  system.tsx
src/pages2/: containers.tsx  images.tsx  volumes.tsx
src/test/: setup.ts  simple.test.ts  test-config.ts  test-utils.tsx
src/types/: config.ts  docker-images.ts  docker-info.ts  engine-state.ts  engine-status.ts  websocket.ts
src/utils/: format.ts  use-filter.ts
tickets/: nerdctl-macos.md
tickets/container/: CONTAINER-000-gui-based-container-creation-wizard.md  CONTAINER-001-dockerfile-based-container-creation-wizard.md  CONTAINER-002-environment-variable-management-interface.md  CONTAINER-003-volume-mount-configuration-wizard.md  CONTAINER-004-network-assignment-interface.md  CONTAINER-005-port-mapping-configuration.md  CONTAINER-006-resource-limits-cpu-memory-setup.md
tickets/debug/: DEBUG-006-resource-usage-alerts.md  (+8 more)
(+349 files in other folders)
