[package]
name = "nookat"
version = "0.1.2-dev"
description = "Nookat is a tool for managing Docker containers"
authors = ["Nookat.io Developers"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nookat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tauri = { version = "2", features = [ "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.18"
dirs = "5"
image = "0.24"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

sentry = { version = "0.35", features = ["panic", "tracing"] }
sentry-tracing = "0.35"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
